Added UI for scanning and showing devices. On Devices under API 31 we required location permission to create a scan for devices thus added location permissions in AndroidManifest.xml Added dependencies kotlin immutable ,icons splash navigation in build.gradle.kts Any of the screen can have mainly 3 state either bluetooth is not active or other 2 permission states. BluetoothScreenType. Other files are mostly components to the route and images BTDeviceViewmodel is the viewmodel connecting the route and BluetoothScanner BTDevicesRoute takes all thing together in a route and presents the data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,19 @@
 
   <uses-permission
     android:name="android.permission.BLUETOOTH_SCAN"
-    android:usesPermissionFlags="neverForLocation" />
+    android:usesPermissionFlags="neverForLocation"
+    tools:targetApi="s" />
   <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
   <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
 
-  <uses-feature android:name="android.hardware.bluetooth" />
+  <uses-permission
+    android:name="android.permission.ACCESS_COARSE_LOCATION"
+    android:maxSdkVersion="30" />
+  <uses-permission
+    android:name="android.permission.ACCESS_FINE_LOCATION"
+    android:maxSdkVersion="30" />
 
+  <uses-feature android:name="android.hardware.bluetooth" />
   <uses-feature
     android:name="android.hardware.bluetooth_le"
     android:required="false" />
@@ -30,12 +37,12 @@
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
-    android:theme="@style/Theme.BlueToothTerminalApp"
+    android:theme="@style/Theme.App.Starting"
     tools:targetApi="31">
     <activity
       android:name=".MainActivity"
       android:exported="true"
-      android:theme="@style/Theme.BlueToothTerminalApp">
+      android:theme="@style/Theme.App.Starting">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
