--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,10 @@
   <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
   <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
 
-  <uses-permission
-    android:name="android.permission.ACCESS_COARSE_LOCATION"
-    android:maxSdkVersion="30" />
-  <uses-permission
-    android:name="android.permission.ACCESS_FINE_LOCATION"
-    android:maxSdkVersion="30" />
+  <!--  Location permissions are required for BLE scan-->
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
   <uses-feature android:name="android.hardware.bluetooth" />
   <uses-feature
@@ -32,17 +30,19 @@
     android:name=".BluetoothTerminalApp"
     android:allowBackup="true"
     android:dataExtractionRules="@xml/data_extraction_rules"
+    android:enableOnBackInvokedCallback="true"
     android:fullBackupContent="@xml/backup_rules"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/Theme.App.Starting"
-    tools:targetApi="31">
+    tools:targetApi="33">
     <activity
       android:name=".MainActivity"
       android:exported="true"
-      android:theme="@style/Theme.App.Starting">
+      android:theme="@style/Theme.App.Starting"
+      android:windowSoftInputMode="adjustResize">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
