--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,24 @@
 [versions]
-agp = "8.3.1"
-compose_destination_animation_version = "1.9.50"
-compose_destination_core_version = "1.9.63"
+agp = "8.3.2"
+compose_destination_animation_version = "1.10.2"
+compose_destination_core_version = "1.10.2"
 coreSplashscreen = "1.0.1"
-datastore = "1.0.0"
-jacksonDataformatYaml = "2.17.0"
-jacksonModuleKotlin = "2.17.0"
-kotlin = "1.9.0"
-coreKtx = "1.12.0"
+datastore = "1.1.0"
+kotlin = "1.9.20"
+coreKtx = "1.13.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 kotlinxCollectionsImmutable = "0.3.7"
 kotlinxDatetime = "0.6.0-RC.2"
+kotlinxSerializationJson = "1.6.3"
 ksp = "1.9.63"
 lifecycleRuntimeKtx = "2.7.0"
-activityCompose = "1.8.2"
-composeBom = "2024.04.00"
+activityCompose = "1.9.0"
+composeBom = "2024.04.01"
 koinBom = "3.5.3"
-materialIconsExtended = "1.6.5"
-ksp_version = "1.9.0-1.0.13"
+materialIconsExtended = "1.6.6"
+ksp_version = "1.9.20-1.0.14"
 protobufJavalite = "3.25.1"
 protobuf_version = "0.9.4"
 
@@ -44,8 +43,6 @@ androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-ru
 #icons
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 #kotlinx immutable
-jackson-dataformat-yaml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml", version.ref = "jacksonDataformatYaml" }
-jackson-module-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jacksonModuleKotlin" }
 kotlinx-collections-immutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinxCollectionsImmutable" }
 #navigation
 compose_destination_animation = { module = "io.github.raamcosta.compose-destinations:animations-core", version.ref = "compose_destination_animation_version" }
@@ -65,6 +62,8 @@ kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.
 # protobuf and datastore
 androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
 protobuf-javalite = { module = "com.google.protobuf:protobuf-javalite", version.ref = "protobufJavalite" }
+# kotlinx serialization
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 
 
 [plugins]
@@ -72,3 +71,4 @@ androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 google_devtools_ksp = { id = "com.google.devtools.ksp", version.ref = "ksp_version" }
 google_protobuf = { id = "com.google.protobuf", version.ref = "protobuf_version" }
+kotlinx_serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
