protobuf-related optimizations and updated dependencies Dependencies are updated and allowed shirink used proto fields for protobuff related optmz.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,16 +10,16 @@ junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 kotlinxCollectionsImmutable = "0.3.7"
-kotlinxDatetime = "0.6.0-RC.2"
+kotlinxDatetime = "0.6.0"
 kotlinxSerializationJson = "1.6.3"
-ksp = "1.9.63"
-lifecycleRuntimeKtx = "2.8.0"
+ksp = "1.10.2"
+lifecycleRuntimeKtx = "2.8.1"
 activityCompose = "1.9.0"
 composeBom = "2024.05.00"
-koinBom = "3.5.3"
+koinBom = "3.5.6"
 materialIconsExtended = "1.6.7"
 ksp_version = "1.9.20-1.0.14"
-protobufJavalite = "4.26.1"
+protobufJavalite = "4.27.0"
 protobuf_version = "0.9.4"
 
 [libraries]
