--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,19 +7,19 @@ datastore = "1.1.1"
 kotlin = "2.0.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
+junitVersion = "1.2.1"
 espressoCore = "3.5.1"
 kotlinxCollectionsImmutable = "0.3.7"
 kotlinxDatetime = "0.6.0"
-kotlinxSerializationJson = "1.7.0"
+kotlinxSerializationJson = "1.7.1"
 ksp = "1.10.2"
-lifecycleRuntimeKtx = "2.8.2"
+lifecycleRuntimeKtx = "2.8.3"
 activityCompose = "1.9.0"
 composeBom = "2024.06.00"
 koinBom = "3.5.6"
 materialIconsExtended = "1.6.8"
 ksp_version = "2.0.0-1.0.21"
-protobufJavalite = "4.27.1"
+protobufJavalite = "4.27.2"
 protobuf_version = "0.9.4"
 
 [libraries]
@@ -56,7 +56,7 @@ koin-compose = { module = "io.insert-koin:koin-androidx-compose" }
 # test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version = "3.6.1" }
 #datetime
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 # protobuf and datastore
