Settings and About screen changes with adding animated visibility local to routes. Added SharedElementTransition to most of the routes. and the remembered blocks for callbacks in about and settings screen removed to use to normal callbacks. AppSettingsRoute.kt routes changed it to medium appbar and adding shared element transition. Fixed strings.xml for ble descriptor value and ble characteristics values. BLEClientScreen.kt argument need to be passed for shared element transition thus passing the routes args. URL's for assigned numbers and source code repo moved to BT constants. Added graphics shapes dependency and updated AGP. RouteAnimation.kt is changed to basic slide direction start and end.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,10 @@
 [versions]
-agp = "8.11.0"
+agp = "8.11.1"
 compose_destination_animation_version = "1.11.9"
 compose_destination_core_version = "2.2.0"
 coreSplashscreen = "1.0.1"
 datastore = "1.1.7"
+graphicsShapes = "1.0.1"
 kotlin = "2.2.0"
 coreKtx = "1.16.0"
 junit = "4.13.2"
@@ -36,6 +37,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-graphics-shapes = { module = "androidx.graphics:graphics-shapes", version.ref = "graphicsShapes" }
 #splash
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 #lifecyle compose runtime
