Sending notifications are working now and new service A new environmental sensing service included to read and notify about the light sensor values LightSensorReader.kt reads the ambient light In AndroidBLEServerConnector.kt and BLEServerGattCallback.kt included notifications the values are read and the map is maintained for subscribers according to the last notification client list is made and notified for notification corrected some portion in AndroidBLEServerConnector::onStartServer BLEMessageModel.kt updated and for notification we use BLENotificationModel.kt Included using sensor.light in AndroidManifest.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,13 @@
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-
   <uses-feature android:name="android.hardware.bluetooth" />
   <uses-feature
     android:name="android.hardware.bluetooth_le"
+    android:required="false" />
+
+  <uses-feature
+    android:name="android.hardware.sensor.light"
     android:required="false" />
 
   <application
